# rust_content_aware_image_resizing

./: Cargo.toml  README.md
src/: main.rs  removal.rs  seam.rs  seam_pixel.rs
