[package]
name = "content-aware-resizing"
version = "0.1.0"
edition = "2021"
authors = ["Jasper Sarrazin"]
description = "Binary crate for resizing an image using seam carving"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image_energy = "0.1.3"
image = "0.24.2"
structopt = "0.3.26"
rayon = "1.5.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"